2006-03-28  Richard Levitte  <richard@levitte.org>

	* po/fr.po: Translation update.

	* po/sv.po: Translation update.

	* contrib/monotone-import.pl, contrib/monotone-import.pl: Change
	MT to _MTN.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* tests/t_at_sign.at: Add a missing MTN_SETUP.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* tests/README, testsuite.at, tests/*.at: First pass at updating
	tests for s/monotone/mtn/.  NB: new tests should use MTN_SETUP and
	MTN macros.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am: Build "mtn", not "monotone".
	* monotone.1: Rename to...
	* mtn.1: ...this.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* tests/*_MT*: Rename to reflect that they now test _MTN, not MT.
	* testsuite.at: Update accordingly.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* tests/*.at: s/MT/_MTN/.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at: s/MT/_MTN/.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi: s/.db/.mtn/ everywhere.  Also, s/MT:/MTN:/, and
	s/MT/_MTN/ as appropriate.
	* monotone.1: Likewise.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (file_path): Use in_bookkeeping_dir when joining paths,
	instead of being clever.  It should be just about as fast, and
	means that there's only one code path that has to know how to
	detect bookkeeping dirs.
	* app_state.cc, automate.cc: Oops, forgot to hit save before.
	s/MT/_MTN/.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (in_bookkeeping_dir): Argh.  Really correct now!
	Really!
	(test_split_join): Another cut-and-paste error.

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_split_join): Whoops, be more careful
	copy-and-pasting within a single scope...
	(in_bookkeeping_dir): Was totally wrong, make all the constants
	correct...

2006-03-28  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (CMD_NO_MT): Rename to...
	(CMD_NO_WORKSPACE): ...this.
	* *.cc, *.hh: s/MT/_MTN/ (mostly in comments).
	